--- a/index.html
+++ b/index.html
@@ -9,36 +9,37 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
-  <title>Регистрация</title>
+  <title>Sign Up</title>
 </head>
 <body>
   <div class="wrapper">
     <form class="form-registration">
-      <h2 class="form-title">Регистрация</h2>
+      <h2 class="form-title">Sign Up</h2>
       <div class="form__email">
-        <span class="starOne"></span>
+        <span class="asteriskOne"></span>
         <span class="form__email-title">Email</span>
-        <input id="email-reg" type="email" placeholder="Введите email" class="form__email-input">
-        <span class="error" id="email_null">Поле обязательно для заполнения</span>
-        <span class="error" id="email_invalid">Email невалидный</span>
+        <input id="email-reg" type="email" placeholder="Enter email" class="form__email-input">
+        <span class="error" id="email_null">Required field</span>
+        <span class="error" id="email_invalid">Invalid email</span>
       </div>
       <div class="form__password">
-        <span class="starTwo"></span>
-        <span class="form__password-title">Пароль</span>
-        <input id="password-reg" type="text" placeholder="Введите пароль" class="form__password-input">
-        <span class="error" id="password_null">Поле обязательно для заполнения</span>
-        <span class="error" id="password_valid">Пароль должен содержать как минимум 8 символов</span>
+        <span class="asteriskTwo"></span>
+        <span class="form__password-title">Password</span>
+        <input id="password-reg" type="text" placeholder="Enter password" class="form__password-input">
+        <span class="error" id="password_null">Required field</span>
+        <span class="error" id="password_valid">Password must be at least 8 characters long</span>
       </div>
       <div class="form__bottom">
-        <span class="starThree"></span>
+        <span class="asteriskThree"></span>
         <input class="checkbox" type="checkbox" id="check">
-        <label for="check">Я согласен с <u>Правилами пользования приложением</u></label>
+        <label for="check">I agree with <u style="cursor: pointer">terms and conditions</u></label>
         <div class="form-special"></div>
-        <span class="error" id="check-null">Поле обязательно для заполнения</span> <br>
+        <span class="error" id="check-null">Required field</span> <br>
       </div>
 
-      <button id="reg-btn" class="form__submit">Регистрация</button>
+      <button id="reg-btn" class="form__submit">Sign Up</button>
     </form>
+  </div>
 <!-- 
     <form class="form-login">
       <h2 class="form-title">Вход</h2>
@@ -61,6 +62,6 @@
       <button class="form__submit">Вход</button>
     </form>
   </div> -->
-  <script src="/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
